# LPBot

./: .gitignore  CMakeLists.txt
src/: DBQuery.h  DataStructures.h  LPBot.cpp  LPBot.h  MatchDB.cpp  MatchDB.h  RiotAPI.cpp  RiotAPI.h  WinPredictionModel.cpp  WinPredictionModel.h  main.cpp
